--- a/package.json
+++ b/package.json
@@ -8,25 +8,33 @@
   "private": true,
   "workspaces": [
     "commons",
+    "newbie/*",
     "junior/*"
   ],
   "dependencies": {
+    "@types/node": "^20.8.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.66.1",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "nodemon": "^2.0.22",
+    "redux-logger": "^3.0.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
