--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
+    "jsx": "react",
     "baseUrl": "./",
     "paths": {
       "@commons/*": [
         "commons/src/*"
       ],
+      "@assets/*": [
+        "assets/*"
+      ]
     },
   },
 }
